// Copyright (c) 2019 IoTeX
// This program is free software: you can redistribute it and/or modify it under the terms of the
// GNU General Public License as published by the Free Software Foundation, either version 3 of
// the License, or (at your option) any later version.
// This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; 
// without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See
// the GNU General Public License for more details.
// You should have received a copy of the GNU General Public License along with this program. If
// not, see <http://www.gnu.org/licenses/>.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";
package election;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";


message VoteCore {
	bytes voter = 1;
	bytes candidate = 2;
	bytes amount = 3;
    google.protobuf.Timestamp startTime = 4;
	google.protobuf.Duration duration = 5;
	bool decay = 6;
}

message Vote {
	VoteCore core = 1;
	bytes weightedAmount = 2;
}

message VoteList {
	repeated Vote votes = 1;
}

message CandidateCore {
	bytes name = 1;
	bytes address = 2;
	bytes operatorAddress = 3;
	bytes rewardAddress = 4;
	uint64 selfStakingWeight = 5;
}

message Candidate {
	CandidateCore core = 1;
	bytes score = 2;
	bytes selfStakingTokens = 3;
}

message ElectionResult {
	google.protobuf.Timestamp timestamp = 1;
	repeated Candidate delegates = 2;
	repeated VoteList delegateVotes = 3;
	bytes totalVotedStakes = 4;
	bytes totalVotes = 5;
}

message ElectionResultMeta {
	google.protobuf.Timestamp timestamp = 1;
	repeated bytes candidatesKey = 2;
	repeated bytes votesKey = 3;
}
